crates/plotnik-lib/tests/04-emit/quantifiers/one_or_more_impossible_body.txt
Q = (function_declaration (program))+ @fns
==== diagnostics ====
error: the grammar builds no `function_declaration` with these children
 --> query.ptk:1:6
  |
1 | Q = (function_declaration (program))+ @fns
  |      ^^^^^^^^^^^^^^^^^^^^
  |
help: `function_declaration` allows fields `body`, `name` or `parameters`
help: each child is admissible here on its own — it is their combination or order the grammar never produces
